hopefully fixes modal shift

--- a/public/css/homepage.css
+++ b/public/css/homepage.css
@@ -58,7 +58,3 @@ a.morelink {
 .page-header {
     text-align: center;
 }
-
-html {
-    margin-right: 0px;
-}
